how tos collection and how to remove file from git history

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ collections:
     output: true
     #https://talk.jekyllrb.com/t/collections-dont-order-properly-on-github-pages/4652
     sort_by: priority  #sort_by does not work on GH pages because it uses an old version of Jekyll
+  how-tos:
+    output: true
 
 sass:
   #sass_dir: _sass/
