mappit data seeder

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: "paciosoft - portfolio"
 description: "My personal portfolio and blog"
+contact-mail: "mailto:giacomo@paciosoft.com"
 minima:
   skin: dark
 author: "Giacomo Pacini"
