--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ collections:
     sort_by: priority  #sort_by does not work on GH pages because it uses an old version of Jekyll
   how-tos:
     output: true
-  pubblications:
+  publications:
     output: true
 
 sass:
